--- a/src/pages/page4/page4.html
+++ b/src/pages/page4/page4.html
@@ -21,6 +21,7 @@
     Click me!
   </button>
   <p id="demo">Demo</p>
+  <p id="demo2">Demo2</p>
   <button ion-button (click) = "changeName('demo')" >Test</button>
   <button ion-button (click) = "changeNameDemo('blue')" >DemoNameChange</button>
 
